--- a/webapp/index.html
+++ b/webapp/index.html
@@ -24,7 +24,7 @@
             <input type="text" v-model.trim="text" class="form-control input-sm"/>
         </label>
         <button class="btn btn-primary" v-on:click="filter">Отфильтровать</button>
-        <button class="btn btn-primary">Сбросить фильтр</button>
+        <button class="btn btn-primary" v-on:click="resetFilter">Сбросить фильтр</button>
     </div>
 
     <table class="table table-bordered contact-table">
